# ALaDyn

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  makefile  vcpkg.json
.github/workflows/: ccpp.yml
cmake/Modules/: FindFFTW.cmake  FindMKL.cmake
doc/: BUILD.md  NAMELIST_GUIDE.md  PAPERS.md
examples/: input_lwfa.nml  input_pwfa.nml  input_tnsa.nml
interface/: fftw_execute_dft_c2r.html  fftw_execute_dft_r2c.html  fftw_execute_r2r.html
lists/: files.html  modules.html  procedures.html  types.html
module/: array_alloc.html  boris_push.html  code_util.html  common_param.html  control_bunch_input.html  curr_and_fields_util.html  diag_part_and_fields.html  env_evolve.html  fluid_density_momenta.html  fstruct_data.html  grid_field_param.html  grid_fields.html  grid_param.html  grid_part_connect.html  grid_part_lib.html  grid_part_util.html  init_beam_part_distrib.html  init_grid_field.html  init_laser_field.html  init_part_distrib.html  ionize.html  ionz_data.html  legacy_fft_lib.html  modern_fft_lib.html  mpi_curr_interface.html  mpi_field_interface.html  mpi_part_interface.html  mpi_var.html  parallel.html  phys_param.html  pic_dump.html  pic_evolve.html  pic_in.html  pic_out.html  pic_out_util.html  precision_def.html  prl_fft.html  psolve.html  pstruct_data.html  read_input.html  (+8 more)
proc/: add_particles.html  advance_lpf_envelope.html  advance_lpf_fields.html  advect_bunch_fields.html  allreduce_dpreal.html  allreduce_sint.html  allreduce_vint.html  bcast_int_sum.html  bden_energy_out.html  beam_data.html  beam_inject.html  bf_bds.html  bfields_out.html  bunch_corr.html  cell_part_dist.html  collect_bunch_and_plasma_density.html  comoving_coordinate.html  cp_pulse.html  curr_accumulate.html  curr_mpi_collect.html  data_out.html  den_energy_out.html  determine_kind.html  dump_data.html  ef_bds.html  en_bdata.html  en_data.html  en_high_gamma_data.html  en_ionz_data.html  endian.html  env_cycle.html  env_den_collect.html  env_ionization_electrons_inject.html  env_lpf2_evolve.html  env_run.html  envar.html  esirkepov_2d_curr.html  esirkepov_3d_curr.html  exchange_bdx_data.html  exchange_pdata.html  (+141 more)
program/: aladyn.html
scripts/run/: marconi-68-knl-fftw.cmd  marconi-68-knl-gnu.cmd  marconi-68-knl.cmd
sourcefile/: aladyn.f90.html  array_alloc.f90.html  boris_push.f90.html  code_util.f90.html  common_param.f90.html  control_bunch_input.f90.html  curr_and_fields_util.f90.html  diag_part_and_fields.f90.html  env_evolve_in_time.f90.html  fluid_density_momenta.f90.html  fstruct_data.f90.html  grid_field_param.f90.html  grid_fields.f90.html  grid_param.f90.html  grid_part_connect.f90.html  grid_part_lib.f90.html  grid_part_util.f90.html  init_beam_part_distrib.f90.html  init_grid_fields.f90.html  init_laser_field.f90.html  init_part_distrib.f90.html  ionize.f90.html  ionz_data.f90.html  modern_fft_lib.f90.html  mpi_curr_interface.f90.html  mpi_field_interface.f90.html  mpi_part_interface.f90.html  mpi_var.f90.html  parallel.f90.html  phys_param.f90.html  pic_dump.f90.html  pic_evolve_in_time.f90.html  pic_in.f90.html  pic_out.f90.html  pic_out_util.f90.html  precision_def.f90.html  prl_fft.f90.html  psolve.f90.html  pstruct_data.f90.html  read_input.f90.html  (+8 more)
src/: .Rapp.history  ALaDyn.F90  CMakeLists.txt  all_param.f90  code_util.f90  control_bunch_input.f90  cpp_folder_tree.cpp  der_lib.f90  enable_gdb_attach.cpp  fft_lib.F90  find_last_addr.cpp  fstruct_data.f90  ft_param.f90  grid_and_particles.f90  grid_fields.f90  grid_param.f90  ionize.f90  ionz_data.f90  mpi_var.f90  parallel.F90  particles.F90  pdf_moments.f90  phys_param.f90  pic_dump.f90  pic_evolve_in_time.f90  pic_in.f90  pic_out.f90  pic_out_util.f90  pic_rutil.f90  precision_def.F90  psolv.f90  pstruct_data.F90  pwfa_bunch_field_calculation.F90  pwfa_output_addons.f90  read_input.f90  struct_def.f90  system_utilities.f90  util.f90
src/IO/: CMakeLists.txt
src/cpp_lib/: CMakeLists.txt
src/diagnostics/: CMakeLists.txt
src/dynamics/: CMakeLists.txt
src/fft/: CMakeLists.txt  prl_fft.f90
src/fields/: CMakeLists.txt
src/grid/: CMakeLists.txt
src/ionization/: CMakeLists.txt
src/parallel/: CMakeLists.txt  mpi_var.F90  parallel.F90
src/particles/: CMakeLists.txt
src/start/: CMakeLists.txt  start_all.F90
src/work/: CMakeLists.txt  code_util.f90
tipuesearch/: tipuesearch_content.js
