add_subdirectory(cpp_lib)
add_subdirectory(diagnostics)
add_subdirectory(dynamics)
add_subdirectory(fft)
add_subdirectory(fields)
add_subdirectory(grid)
add_subdirectory(ionization)
add_subdirectory(IO)
add_subdirectory(parallel)
add_subdirectory(particles)
add_subdirectory(start)
add_subdirectory(work)
